--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port = 8089
 
 spring.jpa.hibernate.ddl-auto=update
+tokenSecret="kan89kjljtrt"
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/craftbay
 spring.datasource.username=root
 spring.datasource.password=root
@@ -9,3 +10,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 server.servlet.context-path=/craftbay
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
