--- a/pom.xml
+++ b/pom.xml
@@ -61,11 +61,6 @@
 			<scope>test</scope>
 		</dependency>
 
-
-
-
-
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
@@ -97,12 +92,34 @@
 			<version>3.2.1</version>
 		</dependency>
 
-
 		<!--		<dependency>-->
 <!--			<groupId>org.apache.tomcat.embed</groupId>-->
 <!--			<artifactId>tomcat-embed-core</artifactId>-->
 <!--			<version>10.1.12</version>-->
 <!--		</dependency>-->
+
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.10.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>5.7.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>2.0.24</version>
+		</dependency>
+
+
+
+
 	</dependencies>
 
 	<build>
