--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,11 @@
 			<artifactId>pdfbox</artifactId>
 			<version>2.0.24</version>
 		</dependency>
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>23.6.0</version>
+		</dependency>
 
 
 
